Correction de l'alignement vertical de la navbar

--- a/asset/scss/style.scss
+++ b/asset/scss/style.scss
@@ -16,10 +16,10 @@ header{
             list-style: none;
             li{
                 &::after{
-                    content:" - ";
+                    content:"  ";
                 }
                 &::before{
-                    content: " - ";
+                    content: "  ";
                 }
             }
         }
